--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
     height: 80%;
     display: grid;
     background-color: white;
-    box-shadow: 0 0 20px rgb(255, 255, 255); /* more info on box-shadows https://css-tricks.com/almanac/properties/b/box-shadow/ */
+    box-shadow: 0 0 16px rgb(255, 255, 255); /* more info on box-shadows https://css-tricks.com/almanac/properties/b/box-shadow/ */
 }
 
 .board:hover {
@@ -117,21 +117,21 @@ button:hover {
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: -1; /* use z-index to place img behind text */
 }
 
 .moving .moving-bg {
-    box-sizing: content-box;
+    
     padding-bottom: 300px;
     position: absolute;
     height: 100%;
     width: 100%;
     background-image: url(./images/rain.jpg);
     background-size: cover;
-    animation: moving 30s linear infinite;
+    animation: moving 15s linear infinite;
 }
 
-
+/* allows for movement of background img */
 @keyframes moving {
     from{
         transform: translateY(0)
